Specials images fixed

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                             <a href="#">Shop now!</a>
                         </div>
                         <div class="card-right">
-                            <img src="/img/main-offer-card-1.png" alt="">
+                            <img src="./img/main-offer-card-1.png" alt="">
                         </div>
                     </div>
                     <div class="offer-card">
@@ -302,7 +302,7 @@
                             <a href="#">Shop now!</a>
                         </div>
                         <div class="card-right">
-                            <img src="/img/main-offer-card-2.png" alt="">
+                            <img src="./img/main-offer-card-2.png" alt="">
                         </div>
                     </div>
                 </div>
